--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "rustycrate-ru"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Michael Pankov <work@michaelpankov.com>"]
 description = "Демо-библиотека для статьи о публикации пакетов на rustycrate.ru"
 license = "BSD-3-Clause"
+homepage = "https://rustycrate.ru"
 
 [dependencies]
